--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,13 @@
         <!-- Spring version -->
         <spring.version>4.3.10.RELEASE</spring.version>
         <!-- junit version -->
-        <junit.version>3.8.1</junit.version>
+        <junit.version>4.12</junit.version>
         <!-- MyBatis version -->
         <mybatis.version>3.4.1</mybatis.version>
         <!-- Log4J version -->
         <log4j.version>2.7</log4j.version>
+        <!-- servlet version -->
+        <servlet.version>4.0.0</servlet.version>
     </properties>
 
     <dependencies>
@@ -33,9 +35,31 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <!-- Spring MVC-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet.version}</version>
+        </dependency>
+
         <!-- MyBatis -->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -56,7 +80,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- log4j -->
+        <!-- log4j
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
@@ -66,7 +90,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-jcl</artifactId>
             <version>${log4j.version}</version>
-        </dependency>
+        </dependency> -->
     </dependencies>
     <build>
         <finalName>spring</finalName>
