--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         <log4j.version>2.7</log4j.version>
         <!-- servlet version -->
         <servlet.version>4.0.0</servlet.version>
+        <!-- mysql connector version -->
+        <mysql.connector.version>5.1.44</mysql.connector.version>
+        <!-- druid version -->
+        <druid.version>1.1.10</druid.version>
+        <!-- MyBatis-Spring -->
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
     </properties>
 
     <dependencies>
@@ -66,6 +72,27 @@
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.connector.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>${mybatis-spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
         <!-- junit -->
         <dependency>
             <groupId>junit</groupId>
