--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <druid.version>1.1.10</druid.version>
         <!-- MyBatis-Spring -->
         <mybatis-spring.version>1.3.1</mybatis-spring.version>
+        <!-- Jackson version-->
+        <jackson.version>2.9.2</jackson.version>
     </properties>
 
     <dependencies>
@@ -64,6 +66,16 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- MyBatis -->
