--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>${servlet.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+        <!--
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
@@ -77,7 +83,7 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
+        -->
         <!-- MyBatis -->
         <dependency>
             <groupId>org.mybatis</groupId>
